--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -12,3 +12,5 @@ spec:
   type: website
   lifecycle: experimental
   owner: ${{values.owner | dump}}
+  providesApis:
+    - ${{ values.component_id | dump }}
