--- a/skeleton/infrastructure/infra-api/Chart.yaml
+++ b/skeleton/infrastructure/infra-api/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: ${{ values.component_id }}
+name: test-go-api
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
