--- a/skeleton/infrastructure/infra-api/values.yaml
+++ b/skeleton/infrastructure/infra-api/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: infra-api
+  repository: example-go-image
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
