chore: adding hld template

--- a/skeleton/mkdocs.yml
+++ b/skeleton/mkdocs.yml
@@ -4,6 +4,7 @@ site_description: ${{values.description | dump}}
 nav:
   - Introduction: index.md
   - SidePage: sidepage.md
+  - HLD: HighLevelDocument.md
 
 # Theme
 theme:
