chore: adding hld template

--- a/skeleton/mkdocs.yml
+++ b/skeleton/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - Introduction: index.md
   - SidePage: sidepage.md
   - HLD: HighLevelDocument.md
+  - DesignReview: DesignReview.md
 
 # Theme
 theme:
